--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "arnab-mongodb-auth",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple starrer project using Node.js and MongoDB",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "",
+    "db-replica": ""
   },
   "keywords": [],
-  "author": "",
+  "author": "Arnab Banerjee",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -17,10 +19,14 @@
     "express-validator": "^7.0.1",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "mongodb-memory-server": "^9.0.1",
     "nodemon": "^2.0.22"
   }
 }
