--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "",
-    "db-replica": ""
+    "test": "mocha tests/setup.js 'tests/**/*.test.js'",
+    "lint": "lint ."
   },
   "keywords": [],
   "author": "Arnab Banerjee",
@@ -16,7 +16,6 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -25,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^10.2.0",
     "mongodb-memory-server": "^9.0.1",
     "nodemon": "^2.0.22"
