--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "mocha tests/setup.js 'tests/**/*.test.js'",
-    "lint": "lint ."
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "Arnab Banerjee",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.53.0",
     "mocha": "^10.2.0",
     "mongodb-memory-server": "^9.0.1",
     "nodemon": "^2.0.22"
