--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "mocha tests/setup.js 'tests/**/*.test.js'",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "cluster": "node cluster.js"
   },
   "keywords": [],
   "author": "Arnab Banerjee",
